--- a/style.css
+++ b/style.css
@@ -48,8 +48,37 @@ h3 {
     border: 6px solid lightblue;
     display: flex;
     justify-content: start;
+    align-items: center;
     width: 100%;
     height: 300px;
     border-top: 0px;
 }
 
+.box {
+    width: 300px;
+    height: 100px;
+    border: 6px solid red;
+}
+
+.box-small {
+    background-color: blueviolet;
+    width: 75%;
+    height: 40%;
+}
+
+.container-four {
+    background-color: black;
+    border: 6px solid lightblue;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    height: 300px;
+    border-top: 0px;
+}
+
+h4 { 
+    color: lightblue;
+    font-size: 25px;
+    text-align: justify;
+}
