--- a/style.css
+++ b/style.css
@@ -1,84 +1,87 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-
 
 h1 {
-    color: lightblue;
-    font-size: 50px;
+  color: lightblue;
+  font-size: 50px;
 }
-
 
 .container {
-    background-color: black;
-    border: 6px solid lightblue;
-    border-bottom: 0px;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 150px;
+  background-color: black;
+  border: 6px solid lightblue;
+  border-bottom: 0px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 150px;
 }
-
 
 h2 {
-    color: lightblue;
-    font-size: 50px;
+  color: lightblue;
+  font-size: 50px;
 }
 
-
 .container-two {
-    background-color: black;
-    border: 6px solid lightblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 200px;
-    border-top: 0%;
+  background-color: rgb(0, 0, 0);
+  border: 6px solid lightblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 200px;
+  border-top: 0%;
 }
 
 h3 {
-    color: lightblue;
-    font-size: 50px;
+  color: lightblue;
+  font-size: 50px;
 }
-
 
 .container-three {
-    background-color: black;
-    border: 6px solid lightblue;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    width: 100%;
-    height: 300px;
-    border-top: 0px;
-}
+  background-color: black;
+  border: 6px solid lightblue;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 1000px;
+  border-top: 0px;
+  flex-direction: column;
+  }
 
 .box {
-    width: 300px;
-    height: 100px;
-    border: 6px solid red;
+  width: 26%;
+  height: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 25px;
 }
 
 .box-small {
-    background-color: blueviolet;
-    width: 75%;
-    height: 40%;
+  background-color: rgb(0, 0, 0);
+  width: 40%;
+  height: 80%;
+  
 }
 
 .container-four {
-    background-color: black;
-    border: 6px solid lightblue;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    width: 100%;
-    height: 300px;
-    border-top: 0px;
+  background-color: black;
+  border: 6px solid lightblue;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+  height: 300px;
+  border-top: 0px;
 }
 
-h4 { 
+h4 {
+  color: lightblue;
+  font-size: 25px;
+  text-align: justify;
+}
+
+a {
     color: lightblue;
-    font-size: 25px;
-    text-align: justify;
 }
